--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -14,8 +14,9 @@
   "license": "MIT",
   "dependencies": {
     "@botpress/cli": "workspace:*",
-    "@botpress/sdk": "workspace:*",
     "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
+    "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "cheerio": "1.0.0-rc.12",
     "gmail-api-parse-message": "^2.1.2",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@sentry/cli": "^2.18.1",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.19.10",
     "@types/nodemailer": "^6.4.4",
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
