--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -7,6 +7,10 @@
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
+    "check:format": "prettier --check .",
+    "fix:format": "prettier --write .",
+    "check:lint": "eslint ./ --ext .ts --ext .tsx",
+    "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
     "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
