--- a/bots/hello-world/package.json
+++ b/bots/hello-world/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "qs": "^6.11.0"
   },
   "devDependencies": {
+    "@botpress/common": "workspace:*",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^18.11.17",
+    "@types/qs": "^6.9.7",
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "@botpress/common": "workspace:*"
+    "typescript": "^4.9.4"
   }
 }
