Updating create-event and update-event actions to include inputs for attendees, invitation emails, and Google Meet video conferencing.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,16 @@ node_modules
 bp_modules
 dist
 gen
+flake.nix
+flake.lock
 local/data
 .DS_Store
 *.tsbuildinfo
 __snapshots__
 .ignore.me.*
+.direnv/
 .env
+.envrc
 .botpress
 .botpresshome
 .botpresshome.*
