--- a/integrations/gsheets/package.json
+++ b/integrations/gsheets/package.json
@@ -12,12 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "google-auth-library": "^9.0.0",
     "googleapis": "^126.0.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.19.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "@botpress/common": "workspace:*"
