--- a/turbo.json
+++ b/turbo.json
@@ -174,6 +174,20 @@
         "@botpress/cli#build"
       ]
     },
+    "@botpresshub/google-ai#add:interfaces": {
+      "cache": false,
+      "dependsOn": ["@botpress/client#build", "@botpress/sdk#build", "@botpress/cli#build"]
+    },
+    "@botpresshub/google-ai#build": {
+      "inputs": ["integration.definition.ts", "src/**"],
+      "outputs": [".botpress/**"],
+      "dependsOn": [
+        "@botpresshub/google-ai#add:interfaces",
+        "@botpress/client#build",
+        "@botpress/sdk#build",
+        "@botpress/cli#build"
+      ]
+    },
     "@botpresshub/groq#add:interfaces": {
       "cache": false,
       "dependsOn": ["@botpress/client#build", "@botpress/sdk#build", "@botpress/cli#build"]
