--- a/integrations/gsheets/package.json
+++ b/integrations/gsheets/package.json
@@ -14,10 +14,12 @@
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
+    "@botpress/sdk-addons": "workspace:*",
     "googleapis": "^144.0.0"
   },
   "devDependencies": {
     "@botpress/common": "workspace:*",
+    "@sentry/cli": "^2.18.1",
     "@types/node": "^18.19.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
