--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -19,9 +19,6 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
-    "@types/node": "^18.11.17",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@types/node": "^18.11.17"
   }
 }
