--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -8,7 +8,8 @@
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "echo 'no interfaces to add'"
+    "add:interfaces": "echo 'no interfaces to add'",
+    "dev": "nodemon --watch \"./src/*\" --ext \"ts\" --exec \"bp deploy -y\""
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,8 @@
     "preact": "^10.23.1",
     "preact-render-to-string": "^6.5.7",
     "query-string": "^6.14.1",
-    "whatsapp-api-js": "^1.0.5"
+    "whatsapp-api-js": "^1.0.5",
+    "nodemon": "^3.1.3"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
