--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -10,14 +10,16 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*",
     "@botpress/common": "workspace:*",
+    "@botpress/sdk": "workspace:*",
     "axios": "^1.7.7",
     "google-auth-library": "^9.0.0",
-    "googleapis": "^144.0.0"
+    "googleapis": "^144.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
-    "@types/node": "^18.11.17"
+    "@types/node": "^18.11.17",
+    "@types/uuid": "^9.0.1"
   }
 }
