--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -12,6 +12,7 @@
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
+    "@botpress/sdk-addons": "workspace:^",
     "axios": "^1.7.7",
     "google-auth-library": "^9.0.0",
     "googleapis": "^144.0.0",
