--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -12,6 +12,7 @@
     "@botpress/client": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
+    "@botpress/sdk-addons": "workspace:*",
     "axios": "^1.7.7",
     "google-auth-library": "^9.0.0",
     "googleapis": "^144.0.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
+    "@sentry/cli": "^2.39.1",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.1"
