--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botpress/cli",
-  "version": "1.8.0",
+  "version": "1.7.1",
   "description": "Botpress CLI",
   "scripts": {
     "build": "pnpm run bundle && pnpm run template:gen",
@@ -49,7 +49,8 @@
     "semver": "^7.3.8",
     "uuid": "^9.0.0",
     "verror": "^1.10.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "yn": "^4.0.0"
   },
   "devDependencies": {
     "@bpinternal/log4bot": "^0.0.4",
