move and code owners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -34,3 +34,4 @@
 /integrations/whatsapp @AbrahamLopez10 @botpress/cloud-services
 /integrations/zapier @AbrahamLopez10 @botpress/cloud-services
 /integrations/zendesk @davidvitora @franklevasseur @botpress/cloud-services
+/integrations/freshchat @davidvitora
