--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@botpress/cli": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@bpinternal/depsynky": "^0.0.2",
+    "@bpinternal/readiness": "^0.0.16",
     "@types/node": "^18.19.67",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
